src/snapshots/moon_cram__diff__tests__exact_match.snap
---
source: src/diff.rs
expression: diffs
---
[matched: 1, unmatched: 0, unexpected: 0]
0001      | = foo
     0001 | = foo

