src/snapshots/moon_cram__diff__tests__exact_no_match.snap
---
source: src/diff.rs
assertion_line: 533
expression: diffs
---
[matched: 0, unmatched: 1, unexpected: 1]
0001      | - bar
     0001 | + foo

