src/snapshots/moon_cram__diff__tests__serialize.snap
---
source: fbcode/clifoundation/mooncram/src/diff.rs
assertion_line: 865
expression: "&rendered"
---
lines:
- kind: matched_expectation
  index: 0
  expectation: matched (equal)
  lines:
  - - 0
    - |
      line content
- kind: unmatched_expectation
  index: 0
  expectation: unmatched (equal)
- kind: unexpected_lines
  lines:
  - - 0
    - |
      line content
